# benchmark-postgre-clickhouse

./: .env.example  .gitignore  README.md  benchmark.py  clickhouse.sql  db_config.py  docker-compose.yml  generate_data.py  load_database.py  main.py  postgres.sql  pyproject.toml
